--- a/controller-view/media/style.css
+++ b/controller-view/media/style.css
@@ -101,66 +101,5 @@ body {
 #main-panel {
   display: flex;
   flex-direction: column;
-  flex: 3;
-  flex: 0 1 60%;
-}
-#simulation-panel {
-  display: flex;
-  flex-direction: column;
-  flex: 0 1 30%;
-  background-color: var(--bb-box-background);
-  padding: 10px;
-}
-#arrows-panel {
-  display: flex;
-  flex-direction: column;
-  flex: 0 1 10%;
-}
-#state-list {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.state-box {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--bb-box-background);
-  filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.1));
-}
-.state-box:focus{
-  outline-color: var(--vscode-focusBorder);
-}
-.state-box-title {
-  background-color: var(--bb-box-title-background);
-  padding: 5px;
-}
-.state-box-content {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-}
-.animation-list, .transition-list, #queries-list {
-  display: flex;
-  flex-direction: column;
-  list-style-type: none;
-  gap: 5px;
-  margin-left: 20px;
-}
-.animation-list li, .transition-list li, #queries-list li{
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  padding-left: 10px;
-  border-left: 7px solid var(--bb-box-title-background);
-}
-.value-text {
-  background-color: black;
-  border-radius: 3px;
-  min-height: 1em;
-  padding: 5px;
-}
-#simulation-header {
-  display: flex;
-  gap: 10px
+  position: relative;
 }
